woohoo late nighters

--- a/configs/Localization/en-us.cfg
+++ b/configs/Localization/en-us.cfg
@@ -264,6 +264,18 @@ Localization
 	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Highlands2 = The drill is overheating. You set it aside to cool down, making sure to check for any sensitive hardware nearby.
 	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Highlands3 = The powderizing bit is too much for your drill. You switch to a coring bit, which helps. The scientists back home will probably be happier anyway with a cylinder of Valheilheim.
 
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Mountains1 = Getting samples from mountains is a good idea, because if the planet had water at one point, the mountain might have been underwater and then have been pushed up. The drill is really struggling though.
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Mountains2 = The drill is overheating. What is this planet made out of, titanium? You sigh and watch as the drill cools down slowly, and then continue getting a sample.
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Mountains3 = From the data we're getting from the suit's builtin soil analyser, we can see trace amounts of organics! We need more thorough scientific experimentation on this though.
+
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_MountCeleste1 = The mountainiest of all mountains, Mount Celeste certainly offers some intrigueing surface samples!
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_MountCeleste2 = The surface seems weirdly soft here. Maybe it's to do with all the sand. You scoop some up in a tube.
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_MountCeleste3 = For some reason, this area has a lot of sand. Maybe analysing the sand more close will reveal why.
+
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Poles1 = The poles of planets usually have some ice, but here it's sand. Again. You bend down, scoop it up, and get it off your gloves.
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Poles2 = Sand from the poles seems a bit different than the other samples. Maybe the poles used to have ice? We can't tell for sure until we send this back to Sanctar.
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Poles3 = The scientists back home think that getting sand from all the biomes of Valheilheim is "easy". That's easy to say when you aren't the one having to actually collect it though.
+
 
 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
