Fixed Po displayName/description bug

--- a/configs/Po.cfg
+++ b/configs/Po.cfg
@@ -12,8 +12,8 @@
         }
         Properties
         {
-            displayName = #LOC_CH_Po_biomeDisplayName_Lowlands
-            description = #LOC_CH_Po_biomeDisplayName_YoungImpactCraters
+            displayName = #LOC_CH_Po_displayName
+            description = #LOC_CH_Po_description
             radius = 100000
             geeASL = 0.07
             rotates = True
