--- a/configs/Localization/en-us.cfg
+++ b/configs/Localization/en-us.cfg
@@ -3,6 +3,7 @@
 
 // Localization written by DIY Labs and Jinxer
 
+
 Localization
 {
 
@@ -244,6 +245,7 @@ Localization
 	#LOC_CH_Valheilheim_biomeDisplayName_MountCeleste = Mount Celeste
 	#LOC_CH_Valheilheim_biomeDisplayName_Poles = Poles
 
+
 	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_ApocalypseDesert1 = You lean down and take a sample of the sand. It's getting everywhere! Little crevices in the suit are filled with dust.
 	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_ApocalypseDesert2 = After taking a sample from the surface, you cap the tube. Tightly. Else the sand gets absolutely everywhere. 
 	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_ApocalypseDesert3 = Taking a surface sample from Valheilheim is quite easy. In fact, you have to try quite hard to get rid of the sand from your spacesuit and ship.
@@ -268,13 +270,46 @@ Localization
 	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Mountains2 = The drill is overheating. What is this planet made out of, titanium? You sigh and watch as the drill cools down slowly, and then continue getting a sample.
 	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Mountains3 = From the data we're getting from the suit's builtin soil analyser, we can see trace amounts of organics! We need more thorough scientific experimentation on this though.
 
-	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_MountCeleste1 = The mountainiest of all mountains, Mount Celeste certainly offers some intrigueing surface samples!
-	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_MountCeleste2 = The surface seems weirdly soft here. Maybe it's to do with all the sand. You scoop some up in a tube.
-	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_MountCeleste3 = For some reason, this area has a lot of sand. Maybe analysing the sand more close will reveal why.
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_MountCeleste1 = proxima write def wen
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_MountCeleste2 = still waiting for proksima
+	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_MountCeleste3 = proksima release actual quality content wen
 
 	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Poles1 = The poles of planets usually have some ice, but here it's sand. Again. You bend down, scoop it up, and get it off your gloves.
 	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Poles2 = Sand from the poles seems a bit different than the other samples. Maybe the poles used to have ice? We can't tell for sure until we send this back to Sanctar.
 	#LOC_CH_Valheilheim_ScienceDef_surfaceSample_Poles3 = The scientists back home think that getting sand from all the biomes of Valheilheim is "easy". That's easy to say when you aren't the one having to actually collect it though.
+
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_ApocalypseDesert1 = You clamber out of the ship and look around. Not much other than sand, rocks, and more sand. The sand gets in little crevices in your spacesuit, and jams up the joints. A better suit is probably needed for long-term exploration here
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_ApocalypseDesert2 = After getting out of the hatch, you look around. Seems to be just sand. Why did we choose to land in the desert again?
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_ApocalypseDesert3 = The sand gets *everywhere*! Any small holes are completely filled. The sand seems to be sentient as well, since it chooses to jam up the sensing probes first.
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_Dunes1 = Finally, there is something to look at other than sand. There appear to be small rocks dotted around. We should probably pick them up and take them home with us.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_Dunes2 = This seems to be quite a nice place! It is not quite as sandy as the desert, and has a few rocks as well. The scientists back at mission control will love these rocks!
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_Dunes3 = You get out of the hatch, and walk out on the dusty surface of Valheilheim. You stare out, pondering questions like "Am I alone here?", "Was there ever life here?"
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_Lowlands1 = You hum "Life On Valheilheim" by David Kerman as you get out of the hatch. More science will tell if that song refers to life other than kerbals.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_Lowlands2 = The surface is dusty at the top, but gets harder lower down. It makes for an interesting surface to walk on! The color of the sand has changed as well, becoming a bit lighter.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_Lowlands3 = The surface is definitely lighter here. Maybe the intense light of Harmonia hasn't cooked it a lot, compared to the desert.
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_Midlands1 = The surface is quite hard here. You feel as though you are walking on a tiled floor. We should probably get a surface sample and analyse it.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_Midlands2 = The atmosphere is a beautiful golden-brown. The surface is a beautiful golden-brown. Everything on this planet is golden-brown. This entire planet is beautiful.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_Midlands3 = This is one of the best spots on this planet to get a photo session done. We can log this as "scientific activity" so we can use the fancy science camera we brought.
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_Highlands1 = 
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_Highlands2 = 
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_Highlands3 = 
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_Mountains1 = Finding a flat spot to land wasn't wasy, but we did it. Mission Control says that this area might have been underwater at one point, so if any life did live on Valheilheim, this would be a good place to find it.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_Mountains2 = The terrain here is a bit tough to navigate, however we can get a good view of the rest of Valheilheim. This area is also rich with telltale signs of organics!
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_Mountains3 = Mountains are not easy to navigate, and this one is certainly no exception. The surface has a bunch of loose rocks, which can slip under your feet at any point.
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_MountCeleste1 = no signs of intelligent life anywhere
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_MountCeleste2 = still waiting for proxy-ma
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_MountCeleste3 = proxima proksima proxy-ma proxcima 
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_Poles1 = The surface seems oddly slippery. Maybe there is frozen-something underneath, covered with a layer of sand? Further experimentation is required.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_Poles2 = Look ma, I'm on the top of the world! Or bottom! We can't really tell without looking at our instruments.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_Poles3 = This place looks the same as the rest of Valheilheim, but it doesn't behave the same. Something tells me that there is more to the poles than what can be observed.
 
 
 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -290,6 +325,7 @@ Localization
 	#LOC_CH_tip7 = Never going to Dasar...
 	#LOC_CH_tip8 = Running out of RAM...
 	#LOC_CH_tip8 = Dusting Valheilheim...
+	#LOC_CH_tip9 = Releasing actual quality content...
 
 	}
 
