added eva reports for valheilheim

--- a/configs/ScienceDefs.cfg
+++ b/configs/ScienceDefs.cfg
@@ -69,3 +69,41 @@
 
 }
 
+@EXPERIMENT_DEFINITION:HAS[#id[evaReport]]
+{
+
+    @RESULTS
+    {
+        
+        ValheilheimSrfLandedApocalypseDesert = #LOC_CH_Valheilheim_ScienceDef_EVAReport_ApocalypseDesert1
+        ValheilheimSrfLandedApocalypseDesert = #LOC_CH_Valheilheim_ScienceDef_EVAReport_ApocalypseDesert2
+        ValheilheimSrfLandedApocalypseDesert = #LOC_CH_Valheilheim_ScienceDef_EVAReport_ApocalypseDesert3
+        
+        ValheilheimSrfLandedDunes = #LOC_CH_Valheilheim_ScienceDef_EVAReport_Dunes1
+        ValheilheimSrfLandedDunes = #LOC_CH_Valheilheim_ScienceDef_EVAReport_Dunes2
+        ValheilheimSrfLandedDunes = #LOC_CH_Valheilheim_ScienceDef_EVAReport_Dunes3
+
+        ValheilheimSrfLandedLowlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_Lowlands1
+        ValheilheimSrfLandedLowlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_Lowlands2
+        ValheilheimSrfLandedLowlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_Lowlands3        
+
+        ValheilheimSrfLandedMidlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_Midlands1
+        ValheilheimSrfLandedMidlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_Midlands2
+        ValheilheimSrfLandedMidlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_Midlands3        
+
+        ValheilheimSrfLandedHighlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_Highlands1
+        ValheilheimSrfLandedHighlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_Highlands2
+        ValheilheimSrfLandedHighlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_Highlands3        
+
+        ValheilheimSrfLandedMountCeleste = #LOC_CH_Valheilheim_ScienceDef_EVAReport_MountCeleste1
+        ValheilheimSrfLandedMountCeleste = #LOC_CH_Valheilheim_ScienceDef_EVAReport_MountCeleste2
+        ValheilheimSrfLandedMountCeleste = #LOC_CH_Valheilheim_ScienceDef_EVAReport_MountCeleste3        
+
+        ValheilheimSrfLandedPoles = #LOC_CH_Valheilheim_ScienceDef_EVAReport_Poles1
+        ValheilheimSrfLandedPoles = #LOC_CH_Valheilheim_ScienceDef_EVAReport_Poles2
+        ValheilheimSrfLandedPoles = #LOC_CH_Valheilheim_ScienceDef_EVAReport_Poles3        
+
+    }
+
+}
+
