added flying low reports to valheilheim, added missing defs

--- a/configs/ScienceDefs.cfg
+++ b/configs/ScienceDefs.cfg
@@ -103,6 +103,35 @@
         ValheilheimSrfLandedPoles = #LOC_CH_Valheilheim_ScienceDef_EVAReport_SrfLanded_Poles2
         ValheilheimSrfLandedPoles = #LOC_CH_Valheilheim_ScienceDef_EVAReport_SrfLanded_Poles3        
 
+
+        ValheilheimFlyingLowApocalypseDesert = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_ApocalypseDesert1
+        ValheilheimFlyingLowApocalypseDesert = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_ApocalypseDesert2
+        ValheilheimFlyingLowApocalypseDesert = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_ApocalypseDesert3
+        
+        ValheilheimFlyingLowDunes = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Dunes1
+        ValheilheimFlyingLowDunes = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Dunes2
+        ValheilheimFlyingLowDunes = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Dunes3
+
+        ValheilheimFlyingLowLowlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Lowlands1
+        ValheilheimFlyingLowLowlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Lowlands2
+        ValheilheimFlyingLowLowlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Lowlands3        
+
+        ValheilheimFlyingLowMidlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Midlands1
+        ValheilheimFlyingLowMidlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Midlands2
+        ValheilheimFlyingLowMidlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Midlands3        
+
+        ValheilheimFlyingLowHighlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Highlands1
+        ValheilheimFlyingLowHighlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Highlands2
+        ValheilheimFlyingLowHighlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Highlands3        
+
+        ValheilheimFlyingLowMountCeleste = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_MountCeleste1
+        ValheilheimFlyingLowMountCeleste = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_MountCeleste2
+        ValheilheimFlyingLowMountCeleste = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_MountCeleste3        
+
+        ValheilheimFlyingLowPoles = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Poles1
+        ValheilheimFlyingLowPoles = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Poles2
+        ValheilheimFlyingLowPoles = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Poles3        
+
     }
 
 }
