--- a/configs/Localization/en-us.cfg
+++ b/configs/Localization/en-us.cfg
@@ -295,9 +295,9 @@ Localization
 	#LOC_CH_Valheilheim_ScienceDef_EVAReport_SrfLanded_Midlands2 = The atmosphere is a beautiful golden-brown. The surface is a beautiful golden-brown. Everything on this planet is golden-brown. This entire planet is beautiful.
 	#LOC_CH_Valheilheim_ScienceDef_EVAReport_SrfLanded_Midlands3 = This is one of the best spots on this planet to get a photo session done. We can log this as "scientific activity" so we can use the fancy science camera we brought.
 
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_SrfLanded_Highlands1 = 
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_SrfLanded_Highlands2 = 
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_SrfLanded_Highlands3 = 
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_SrfLanded_Highlands1 = The surface is really stiff and hard. This would be an excellent place to anchor some stuff that you don't want moving.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_SrfLanded_Highlands2 = The ground is really hard and unmoving rock. It's a great place to send a rover, which doesn't need to worry about sinking in the sand.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_SrfLanded_Highlands3 = We should have brought some ground anchors here. This place is excellent for gathering data long-term, as there isn't a lot of sand that can cover up any solar panels.
 
 	#LOC_CH_Valheilheim_ScienceDef_EVAReport_SrfLanded_Mountains1 = Finding a flat spot to land wasn't wasy, but we did it. Mission Control says that this area might have been underwater at one point, so if any life did live on Valheilheim, this would be a good place to find it.
 	#LOC_CH_Valheilheim_ScienceDef_EVAReport_SrfLanded_Mountains2 = The terrain here is a bit tough to navigate, however we can get a good view of the rest of Valheilheim. This area is also rich with telltale signs of organics!
@@ -310,6 +310,39 @@ Localization
 	#LOC_CH_Valheilheim_ScienceDef_EVAReport_SrfLanded_Poles1 = The surface seems oddly slippery. Maybe there is frozen-something underneath, covered with a layer of sand? Further experimentation is required.
 	#LOC_CH_Valheilheim_ScienceDef_EVAReport_SrfLanded_Poles2 = Look ma, I'm on the top of the world! Or bottom! We can't really tell without looking at our instruments.
 	#LOC_CH_Valheilheim_ScienceDef_EVAReport_SrfLanded_Poles3 = This place looks the same as the rest of Valheilheim, but it doesn't behave the same. Something tells me that there is more to the poles than what can be observed.
+
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_ApocalypseDesert1 = You clamber out of the ship and look around. Not much other than sand, rocks, and more sand. The sand gets in little crevices in your spacesuit, and jams up the joints. A better suit is probably needed for long-term exploration here
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_ApocalypseDesert2 = After getting out of the hatch, you look around. Seems to be just sand. Why did we choose to land in the desert again?
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_ApocalypseDesert3 = The sand gets *everywhere*! Any small holes are completely filled. The sand seems to be sentient as well, since it chooses to jam up the sensing probes first.
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Dunes1 = Flying at this altitude over the dunes is certainly fun, however we might run the risk of getting sand into the engines. That would be an expensive repair bill.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Dunes2 = At this altitude we can see the terrain below us more clearly. It seems to be mostly sand, with some rock formations as well. Mission Control instructs us to pick up those rocks.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Dunes3 = The surface seems to be quite suitable for landing here. Better than the desert next to it. Planes are probably not gonna enjoy this, as the surface is still sandy.
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Lowlands1 = Flying above the ground, we can see the color shift. The surface here is most certainly lighter than the desert. Then again, it might be the stunning beauty fooling us.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Lowlands2 = Mission Control informs us that this area is a prime suspect of organics. We should probably be gentle with the landing, we don't want hot rocket fuel contaminating the surface.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Lowlands3 = This area reminds you of Duna, but not so red. The crew gets emotional, remembering their old home.
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Midlands1 = Surface analysis shows us that this area is "as hard as tiles". This would make an ideal place to land, however we might find it hard to get any science.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Midlands2 = Here, we can truly appreciate the beauty of Valheilheim. All the photos from telescopes back on Sanctar don't do the stunning appearance of of this desert world justice.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Midlands3 = The crew want to do a photo session on the ground. The only high-resolution camera we have is the camera meant for photographing surface samples. We don't need to put this in the mission log.
+																														                 																														
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Highlands1 = The surface analyser seems to have maxed out its "hardness" parameter. This might be an ideal place to land and set up a temporary base, until a more permanent one comes along.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Highlands2 = Experiments show that this the best place to land, since the surface is hard rock. We might not get a lot of science though, since all the valuable samples are locked underneath the hard, rocky, surface.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Highlands3 = I hope our landing gear is storn if we plan to land here, all instruments indicate an extremely tough surface. We probably shouldn't allow Jeb to command the ship.
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Mountains1 = The terrain is very interesting here. It might be hard to find a good place to land. Misison Control tells us that this area might have signs of organics.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Mountains2 = The terrain we are flying over was once underwater, according to the scientists back at Mission Control. We should be careful and not contaminate anything.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Mountains3 = This area is apparently full of organics. The terrain might be challenging, but it's worth it. If we manage to collect samples, we might fid the answer to life, the universe, and everything.
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_MountCeleste1 =  aaaaaaaaaaaaaaa
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_MountCeleste2 = bbbbbbbbbbbbbbbbb
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_MountCeleste3 = sssssssssssss
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Poles1 = Jeb wanted to put on a beard and mustache and impersonate Santa. We should probably keep an eye on him.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Poles2 = From up here, the poles look similar to the rest of Valheilheim. This planet keeps on surprising us. The area is very flat though, so we can probably pop down and take a closer look.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Poles3 = At this altitude we can get a closeer look at Valheilheim's poles. The area looks similar to the rest of Valheilheim, but our instruments indicate... something off...
 
 
 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -326,6 +359,7 @@ Localization
 	#LOC_CH_tip8 = Running out of RAM...
 	#LOC_CH_tip8 = Dusting Valheilheim...
 	#LOC_CH_tip9 = Releasing actual quality content...
+	#LOC_CH_tip10 = Going live on the comms...
 
 	}
 
