--- a/configs/Localization/en-us.cfg
+++ b/configs/Localization/en-us.cfg
@@ -312,37 +312,70 @@ Localization
 	#LOC_CH_Valheilheim_ScienceDef_EVAReport_SrfLanded_Poles3 = This place looks the same as the rest of Valheilheim, but it doesn't behave the same. Something tells me that there is more to the poles than what can be observed.
 
 
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_ApocalypseDesert1 = You clamber out of the ship and look around. Not much other than sand, rocks, and more sand. The sand gets in little crevices in your spacesuit, and jams up the joints. A better suit is probably needed for long-term exploration here
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_ApocalypseDesert2 = After getting out of the hatch, you look around. Seems to be just sand. Why did we choose to land in the desert again?
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_ApocalypseDesert3 = The sand gets *everywhere*! Any small holes are completely filled. The sand seems to be sentient as well, since it chooses to jam up the sensing probes first.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_ApocalypseDesert1 = You hang onto the ship as the autopilot holds the attitude steady. The desert looms below, looking pretty formiddable. The sand might cause trouble if we go down there though.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_ApocalypseDesert2 = Hanging on to the hatch, you look at the desert stretching out for hundreds of kilometers below you. Orbital scans show that this desert covers around half the planet.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_ApocalypseDesert3 = You peer down at the surface below. Hanging out at this low altitude is probably not recommended, but you have a parachute equipped. The sand is everywhere.
 
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Dunes1 = Flying at this altitude over the dunes is certainly fun, however we might run the risk of getting sand into the engines. That would be an expensive repair bill.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Dunes2 = At this altitude we can see the terrain below us more clearly. It seems to be mostly sand, with some rock formations as well. Mission Control instructs us to pick up those rocks.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Dunes3 = The surface seems to be quite suitable for landing here. Better than the desert next to it. Planes are probably not gonna enjoy this, as the surface is still sandy.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Dunes1 = The dunes seem to have less sand than the desert next to it. Looking out the hatch, we can see the rocks clearly. Probably not a good idea to land there.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Dunes2 = The sand gets blown up by the engines. You are glad that the faceplate on your helmet is scratch-resistant. The fine grit is damaging the rubber seals though.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Dunes3 = As you look down at the surface, you see rocks. And sand. Basically the desert, but not as much sand. This is probably not the best area to land, but it's better than the desert.
 
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Lowlands1 = Flying above the ground, we can see the color shift. The surface here is most certainly lighter than the desert. Then again, it might be the stunning beauty fooling us.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Lowlands2 = Mission Control informs us that this area is a prime suspect of organics. We should probably be gentle with the landing, we don't want hot rocket fuel contaminating the surface.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Lowlands3 = This area reminds you of Duna, but not so red. The crew gets emotional, remembering their old home.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Lowlands1 = According to Mission Control, there are signs of water detected here. Looking down at the surface, you can see faint traces of river deltas in the rock. 
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Lowlands2 = You see faint river deltas in the rock below. THey are covered in sand, but are still visible. Millions of years of dust storms have taken care of spreading sand everywhere.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Lowlands3 = THe dust storms on Valheilheim have spread sand on everywhere on this planet. You look down and see sand, but not as much as the desert.
 
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Midlands1 = Surface analysis shows us that this area is "as hard as tiles". This would make an ideal place to land, however we might find it hard to get any science.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Midlands2 = Here, we can truly appreciate the beauty of Valheilheim. All the photos from telescopes back on Sanctar don't do the stunning appearance of of this desert world justice.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Midlands3 = The crew want to do a photo session on the ground. The only high-resolution camera we have is the camera meant for photographing surface samples. We don't need to put this in the mission log.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Midlands1 = According to our instruments, the surface you see is getting harder. We should probably get samples from different elevations, as this is sort of new.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Midlands2 = Looking down at the surface of Valhielheim, you realise just how beautiful this planet is. All the photos from telescopes back on Sanctar don't do this planet justice.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Midlands3 = The crew inside the ship want to do a photo session on the ground. The only high-resolution camera we have is the camera meant for photographing surface samples. We don't need to put this in the mission log.
 																														                 																														
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Highlands1 = The surface analyser seems to have maxed out its "hardness" parameter. This might be an ideal place to land and set up a temporary base, until a more permanent one comes along.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Highlands2 = Experiments show that this the best place to land, since the surface is hard rock. We might not get a lot of science though, since all the valuable samples are locked underneath the hard, rocky, surface.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Highlands3 = I hope our landing gear is storn if we plan to land here, all instruments indicate an extremely tough surface. We probably shouldn't allow Jeb to command the ship.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Highlands1 = The crew inside say that the surface scanner reports the surface to be "extremely hard". Looking down, you notice a mild color change. We should land there to be sure.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Highlands2 = As you look down at the surface below, you gasp in awe. THe stunning terrain looks, well, other-worldly. The crew inside feel similar feelings of wonder.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Highlands3 = The golden-brown surface takes up most of your field of view. As you look down, you can't help but wonder if life ever lived here, if life other than kerbals ever experienced the beauty of Valheilheim.
 
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Mountains1 = The terrain is very interesting here. It might be hard to find a good place to land. Misison Control tells us that this area might have signs of organics.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Mountains2 = The terrain we are flying over was once underwater, according to the scientists back at Mission Control. We should be careful and not contaminate anything.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Mountains3 = This area is apparently full of organics. The terrain might be challenging, but it's worth it. If we manage to collect samples, we might fid the answer to life, the universe, and everything.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Mountains1 = The terrain is more jagged here. You grip the handrail harder, watching the transition between the relatively flat ground to these massive peaks. 
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Mountains2 = As you look at the mountains looming up, you notice some sort of snow at the peaks. We should probably analyse that snow. Maybe Valheilheim once had snowstorms up there?
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Mountains3 = Hanging onto your ship with that terrain looming underneath is definitely not for the weak-hearted. You really hope that the crew inside can fly the ship vessel well.
 
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_MountCeleste1 =  aaaaaaaaaaaaaaa
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_MountCeleste2 = bbbbbbbbbbbbbbbbb
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_MountCeleste3 = sssssssssssss
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_MountCeleste1 =  bap badabaaaa ba ba ba baaaa baba ba baaaaaaaaaaaaaaaaa
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_MountCeleste2 = qwerty > poiuyt
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_MountCeleste3 = asdf > lkjh
 
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Poles1 = Jeb wanted to put on a beard and mustache and impersonate Santa. We should probably keep an eye on him.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Poles2 = From up here, the poles look similar to the rest of Valheilheim. This planet keeps on surprising us. The area is very flat though, so we can probably pop down and take a closer look.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Poles3 = At this altitude we can get a closeer look at Valheilheim's poles. The area looks similar to the rest of Valheilheim, but our instruments indicate... something off...
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Poles1 = As you look down onto the poles, you notice something weird. They look, well, a bit off. We really need to get data from them. Could be traces of organics there.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Poles2 = Looking down at the poles, you notice the same slightly white substance that covers the mountain peaks. What is it? We should probably send a sample of this back to Sanctat to be analysed.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Poles3 = The poles appear to be covered with a strange whitish compound. From this angle, combined with the buffeting of the ship, you can't look at it too closely. We should get some samples from there.
+
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_ApocalypseDesert1 = You get out of the hatch and look down upon the barren planet. This desert covers more than half of the planet, and doesn't have anything interesting going on. Or does it?
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_ApocalypseDesert2 = At this altitude, you can see how the desert is really just a barren wasteland. Nothing too interesting here. We should probably go the nearby dunes for actual science.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_ApocalypseDesert3 = It's sort of weird to think that then entire planet has been covered in sand from this oen desert, thanks to planet-wide sandstorms.
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Dunes1 = As you hangg on to the side of the ship, you pe at the dunes below. The dunes look pretty similar to the desert nearby, but have more rocks. This might be a good place to study the desert without too much risk of sand.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Dunes2 = As you look down at the surface, you think that this would be an excellent place for a surface base, since you can study the desert without having all your equipment sandblasted.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Dunes3 = Mission Control tells us to find a good spot here for a surface base. As you look down at the dunes, you remark that there are a bunch of rocks. It might take a while to find a nice, flat place without any dangeroud rocks.
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Lowlands1 = As the ship gains altitude, you lose sight of those river deltas. There might have been bigger ones, but they are probably buried under several meters of sand. 
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Lowlands2 = This area is a prime suspect of traces of organics. We might find some signs of life if we look closely. Hanging off the side of a ship is not the best way to find them though.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Lowlands3 = As you look down at the surface, it reminds you of Duna. It's almost the same, but not red. A tear drips down into your neck ring as you remember the home you once had.
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Midlands1 = From out here, you can see how the surface looks noticable different than the lowlands and dunes. The crew inside say that the surface is harder than the other biomes. We should probably go down there to investigate.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Midlands2 = Hanging from the side of the ship, you can truly appreciate the beauty of Valheilheim. All the photos from telescopes back on Sanctar don't do the stunning appearance of of this desert world justice.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Midlands3 = You feel like you want to do a photo session on the ground. The only high-resolution camera we have is the camera meant for photographing surface samples. We don't need to put this in the mission log.
+																														                 																														
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Highlands1 = The crew inside the craft tell you to look for a good place to land. The surface is apparently hard rock, which may have proteced some organics from the harsh sandstorms above.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Highlands2 = As you look at the surface, you notice how the surface looks different compared to the rest of Valheilheim. The crew inside say that the surface analyser inside has maxed out the "surface hardness" parameter.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Highlands3 = The surface is definitely different from the rest of Valheilheim. From up here, we can see a difference in the color. The crew inside the ship say that the surface is getting harder the higher up we go.
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Mountains1 = At these altitudes, the smaller details blend together, leaving you with just the outlines. Mission Control says this area might have traces of water, locked underneath the rock.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Mountains2 = According to scientists back at home, there might be traces of organics here, as this area was underwater before being pushed up into a mountain range. We should be careful and not contaminate the surface with rocket exhaust.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Mountains3 = This area is apparently full of organics. The terrain might be challenging, but it's worth it. If we manage to collect samples, we might fid the answer to life, the universe, and everything.
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_MountCeleste1 =  aaaaaaaaaaaaaaa
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_MountCeleste2 = bbbbbbbbbbbbbbbbb
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_MountCeleste3 = sssssssssssss
+
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Poles1 = From up here, we can notice that the poles have a strange color. Usually poles are white with ice, but these poles look, almost brown. We should probably pop down and get a surface sample.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Poles2 = You feel like donning a big white beard, a red stocking cap, and flying around Valheilheim delivering presents to the non-existent inhabitors.
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Poles3 = The crew inside gasp as some indicators start to rotate around rapidly. You look down, but there doesn't appear to be anything down there. What's going on down there?
 
 
 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -360,6 +393,7 @@ Localization
 	#LOC_CH_tip8 = Dusting Valheilheim...
 	#LOC_CH_tip9 = Releasing actual quality content...
 	#LOC_CH_tip10 = Going live on the comms...
+	#LOC_CH_tip11 = Thinking about lore...
 
 	}
 
