--- a/configs/ScienceDefs.cfg
+++ b/configs/ScienceDefs.cfg
@@ -132,33 +132,11 @@
         ValheilheimFlyingLowPoles = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Poles2
         ValheilheimFlyingLowPoles = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Poles3        
 
-        ValheilheimFlyingHighApocalypseDesert = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_ApocalypseDesert1
-        ValheilheimFlyingHighApocalypseDesert = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_ApocalypseDesert2
-        ValheilheimFlyingHighApocalypseDesert = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_ApocalypseDesert3
-        
-        ValheilheimFlyingHighDunes = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Dunes1
-        ValheilheimFlyingHighDunes = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Dunes2
-        ValheilheimFlyingHighDunes = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Dunes3
 
-        ValheilheimFlyingHighLowlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Lowlands1
-        ValheilheimFlyingHighLowlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Lowlands2
-        ValheilheimFlyingHighLowlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Lowlands3        
-
-        ValheilheimFlyingHighMidlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Midlands1
-        ValheilheimFlyingHighMidlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Midlands2
-        ValheilheimFlyingHighMidlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Midlands3        
-
-        ValheilheimFlyingHighHighlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Highlands1
-        ValheilheimFlyingHighHighlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Highlands2
-        ValheilheimFlyingHighHighlands = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Highlands3        
-
-        ValheilheimFlyingHighMountCeleste = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_MountCeleste1
-        ValheilheimFlyingHighMountCeleste = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_MountCeleste2
-        ValheilheimFlyingHighMountCeleste = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_MountCeleste3        
-
-        ValheilheimFlyingHighPoles = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Poles1
-        ValheilheimFlyingHighPoles = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Poles2
-        ValheilheimFlyingHighPoles = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Poles3        
+        ValheilheimFlyingHigh = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh1
+        ValheilheimFlyingHigh = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh2
+        ValheilheimFlyingHigh = #LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh3
+    
 
     }
 
