Added flying high defs for Valheilheim

--- a/configs/Localization/en-us.cfg
+++ b/configs/Localization/en-us.cfg
@@ -2,6 +2,7 @@
 // This file has science defines, which are more fun to read in KSP then in here
 
 // Localization written by DIY Labs and Jinxer
+// turns out FlyingHigh crew reports are global whoops
 
 
 Localization
@@ -345,37 +346,9 @@ Localization
 	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingLow_Poles3 = The poles appear to be covered with a strange whitish compound. From this angle, combined with the buffeting of the ship, you can't look at it too closely. We should get some samples from there.
 
 
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_ApocalypseDesert1 = You get out of the hatch and look down upon the barren planet. This desert covers more than half of the planet, and doesn't have anything interesting going on. Or does it?
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_ApocalypseDesert2 = At this altitude, you can see how the desert is really just a barren wasteland. Nothing too interesting here. We should probably go the nearby dunes for actual science.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_ApocalypseDesert3 = It's sort of weird to think that then entire planet has been covered in sand from this oen desert, thanks to planet-wide sandstorms.
-
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Dunes1 = As you hangg on to the side of the ship, you pe at the dunes below. The dunes look pretty similar to the desert nearby, but have more rocks. This might be a good place to study the desert without too much risk of sand.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Dunes2 = As you look down at the surface, you think that this would be an excellent place for a surface base, since you can study the desert without having all your equipment sandblasted.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Dunes3 = Mission Control tells us to find a good spot here for a surface base. As you look down at the dunes, you remark that there are a bunch of rocks. It might take a while to find a nice, flat place without any dangeroud rocks.
-
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Lowlands1 = As the ship gains altitude, you lose sight of those river deltas. There might have been bigger ones, but they are probably buried under several meters of sand. 
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Lowlands2 = This area is a prime suspect of traces of organics. We might find some signs of life if we look closely. Hanging off the side of a ship is not the best way to find them though.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Lowlands3 = As you look down at the surface, it reminds you of Duna. It's almost the same, but not red. A tear drips down into your neck ring as you remember the home you once had.
-
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Midlands1 = From out here, you can see how the surface looks noticable different than the lowlands and dunes. The crew inside say that the surface is harder than the other biomes. We should probably go down there to investigate.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Midlands2 = Hanging from the side of the ship, you can truly appreciate the beauty of Valheilheim. All the photos from telescopes back on Sanctar don't do the stunning appearance of of this desert world justice.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Midlands3 = You feel like you want to do a photo session on the ground. The only high-resolution camera we have is the camera meant for photographing surface samples. We don't need to put this in the mission log.
-																														                 																														
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Highlands1 = The crew inside the craft tell you to look for a good place to land. The surface is apparently hard rock, which may have proteced some organics from the harsh sandstorms above.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Highlands2 = As you look at the surface, you notice how the surface looks different compared to the rest of Valheilheim. The crew inside say that the surface analyser inside has maxed out the "surface hardness" parameter.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Highlands3 = The surface is definitely different from the rest of Valheilheim. From up here, we can see a difference in the color. The crew inside the ship say that the surface is getting harder the higher up we go.
-
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Mountains1 = At these altitudes, the smaller details blend together, leaving you with just the outlines. Mission Control says this area might have traces of water, locked underneath the rock.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Mountains2 = According to scientists back at home, there might be traces of organics here, as this area was underwater before being pushed up into a mountain range. We should be careful and not contaminate the surface with rocket exhaust.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Mountains3 = This area is apparently full of organics. The terrain might be challenging, but it's worth it. If we manage to collect samples, we might fid the answer to life, the universe, and everything.
-
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_MountCeleste1 =  aaaaaaaaaaaaaaa
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_MountCeleste2 = bbbbbbbbbbbbbbbbb
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_MountCeleste3 = sssssssssssss
-
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Poles1 = From up here, we can notice that the poles have a strange color. Usually poles are white with ice, but these poles look, almost brown. We should probably pop down and get a surface sample.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Poles2 = You feel like donning a big white beard, a red stocking cap, and flying around Valheilheim delivering presents to the non-existent inhabitors.
-	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh_Poles3 = The crew inside gasp as some indicators start to rotate around rapidly. You look down, but there doesn't appear to be anything down there. What's going on down there?
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh1 = You get out of the hatch and look down upon the barren planet. The desert covers more than half of the planet, and doesn't have anything interesting going on. Or does it?
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh2 = At this altitude, you can see that the planet is just sand, sand, sand, and then sand. It might once have had water and organics on it though, so it's worth exploring
+	#LOC_CH_Valheilheim_ScienceDef_EVAReport_FlyingHigh3 = It's sort of weird to think that then entire planet has been covered in sand, thanks to planet-wide sandstorms.
 
 
 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
